fix navigation drawer z-index

--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -82,3 +82,7 @@ table.table tr:not(:last-child){
 .toolbar--fixed{
   z-index: 30;
 }
+
+.navigation-drawer{
+  z-index: 31;
+}
